fix: the header width changed if scrollbar existed

--- a/css/wab.css
+++ b/css/wab.css
@@ -1,4 +1,5 @@
 html {
+    overflow-y: scroll;
     font-size: 16px;
     color: rgb(51, 51, 51);
     background-color: white;
